Improve slider appearance on mobile, and attempt to fix mobile overflow bug

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,9 +4,19 @@ html {
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
+  position: relative;
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -667,7 +677,7 @@ a:hover {
 .arrow-container-left,
 .arrow-container-right {
   // height: 50vh;
-  height: 500px;
+  height: 100%;
   cursor: pointer;
   width: 20%;
   min-width: 100px;
@@ -699,6 +709,22 @@ a:hover {
   transition: 200ms ease-out;
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   opacity: 1;
+}
+
+  .slide-quotation-mark {
+    font-size: 10rem; 
+    margin: 0 0 -60px 0;
+  }
+
+@media only screen and (max-width: 500px) {
+  .slide-quotation-mark {
+    font-size: 5rem; 
+    margin: 0;
+  }
+
+  .slide-description {
+    font-size: 1.4rem;
+  }
 }
 
 // FORM
@@ -754,14 +780,14 @@ a:hover {
 
 @media only screen and (max-width: 767px) {
   .sample-grid {
-    // grid-template-columns: 1fr 1fr;
-    // grid-template-rows: 1fr 1fr 1fr;
+  // grid-template-columns: repeat( auto-fill, minmax(200px, 1fr) );
+
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 440px) {
   .sample-grid {
-    // display: block;
+    display: block;
 
     div {
       margin: 0 0 20px 0;
@@ -885,4 +911,24 @@ a:hover {
 
 .nav-link-hidden {
   display: none;
+}
+
+// Title
+
+.title {
+  font-size: 3.2rem;
+}
+
+.title2 {
+  font-size: 2.5rem;
+}
+
+@media only screen and (max-width: 480px) {
+.title {
+  font-size: 2.4rem;
+}
+
+.title2 {
+  font-size: 2.2rem;
+}
 }
